new jsons, json edits

--- a/src/comp/index.njk
+++ b/src/comp/index.njk
@@ -206,7 +206,7 @@ permalink: "/comp/"
                title="View images"
                style="cursor: pointer; font-size: 18px;"
                onclick='openModal("{{ firstImg.externalId }}", {{ show.images | dump | safe }})'
-               >📷 {{ show.images.length }}</span>
+               >📷</span>
             {% else %}
             —
             {% endif %}
