--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -727,3 +727,10 @@ body {
     padding-left: 5px;
 	font-weight: 500;
 }
+
+.focus-wrapper {
+  flex-basis: 100%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
