--- a/src/index.njk
+++ b/src/index.njk
@@ -3,7 +3,7 @@
 {% block content %}
 <section style="margin-top: -20px;">
    <div class="focus-wrapper mb-3">
-      <div class="rules-tapers-block" style="text-align: center;">
+      <div class="warning-block" style="text-align: center;">
          🎭 I no longer collect other bands - <strong>Slipknot shows are my exclusive focus.</strong>
       </div>
    </div>
