--- a/src/shows/index.njk
+++ b/src/shows/index.njk
@@ -11,7 +11,7 @@
          <span id="show-count-number">0</span>
       </p>
 
-      <div class="dropdown year-filter">
+      <div class="dropdown year-filter" hidden>
          <button id="yearFilterBtn" class="btn year-pill dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
             All years
          </button>
